fix: increase dropdown z-index and add styles

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -30,6 +30,7 @@ $text-info-desc-color: #575757;
 
 // Shadow
 $shadow-cart-counter-color: rgba(0, 0, 0, 0.15);
+$shadow-dropdown-color: rgba(99, 99, 99, 0.2);
 
 // Loading Spinner
 $spinner-main-color: #6a983c;
