--- a/src/core/components/Header/components/Selector/Selector.scss
+++ b/src/core/components/Header/components/Selector/Selector.scss
@@ -31,9 +31,10 @@
   position: absolute;
   top: 100%;
   left: 50%;
-  z-index: 1;
+  z-index: 2;
   transform: translateX(-50%);
-  background-color: $bg-white-color;
+  background: $bg-search-color;
+  box-shadow: $shadow-dropdown-color 0px 2px 8px 0px;
   list-style: none;
   border: 1px solid $header-search-border-color;
 
